 * Miscellaneous and bug fixes:
   * Compressed start-of-scenario saves are properly recognized by the
     load-game dialog again.
   * Fixed replays for single-player campaigns (bug #12005).
   * Fixed the restart-replay button causing an assertion failure.
   * New memory allocator introduced to the engine. It should
     produce 5-10% savings in memory usage on 64-bit systems.
   * Included extra headers for certain g++ versions (patch #1113).
   * Fixed random memory corruption/assertion failure/massive leak due
     to story  screens.
   * Fixed [role] not working when no type was specified (bug #12660).
   * Fixed compilation with Python 2.6 (bug #12638 (included a patch)).
   * Fixed spammy multiplication of advancement options for units
     affected by the [unit_type][advancefrom] clause (observed in
     add-on Invasion_from_the_Unknown from the wesnoth-umc-dev
     trunk) each time advancements were evaluated.
   * Improved the drawing routine for the ttext class.

Version 1.5.6:
 * Authoring tools:
   * trackplacer is a pygtk tool that makes it possible to visually edit
     the journey tracks on Wesnoth campaign maps.
 * Campaigns:
   * Descent into Darkness
     * Added a set of story art.
     * Made Malin's side use the ostensibly obscure undead flags after his
       banishment
   * Eastern Invasion
     * In 'Weldyn Besieged', the positions of the liches are now randomized and
       their names hidden until you attack them (patch #1109).
   * Legend of Wesmere
     * Newly added to mainline: Intermediate level, 24 scenarios.
       (Imported from wesnoth-umc-dev.)
   * Son of the Black Eye
     * In 'Clash of Armies', fixed all the merman spawns not working correctly
       and limited the number of simultaneous enemy gryphon recruits on the
       easiest difficulty.
   * The South Guard
     * Rewrote 'The Long March'.
     * Made each turn past turn 6 that passes in 'Pebbles in the Flood' give